feat!: migrate to Spring Boot 3.0 & Java 17, clean repository, modernize Docker workflows
- Upgrade backend from Spring Boot 2.7.18 to 3.0, adopting Jakarta EE 9+ namespaces
- Bump Java version from 11 to 17 (LTS), leveraging new language features and improved performance
- Remove deprecated APIs and legacy code, reduce technical debt
- Clean up obsolete configs, test resources, and clarify module boundaries (dashboard, liquibase, etc.)
- Modernize Docker support: reorganize Dockerfiles, add/standardize compose files for dev, Oracle, Postgres
- Standardize container-based workflows for all supported environments
- Update documentation to reflect new structure and best practices

BREAKING CHANGE: Requires Java 17+