@@ -1,7 +1,6 @@
 package org.sitmun.infrastructure.persistence.type.image;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.stereotype.Component;
@@ -23,7 +22,7 @@ public class ImageScalingProperties {
 	public ImageProperty getImagePropertyByType(String type) {
 		ImageProperty result = null;
 		if (sizes != null && !sizes.isEmpty()) {
-			List<ImageProperty> filterResults = sizes.stream().filter(s -> s.getType().equals(type)).collect(Collectors.toList());
+			List<ImageProperty> filterResults = sizes.stream().filter(s -> s.getType().equals(type)).toList();
 			if (!filterResults.isEmpty()) {
 				result = filterResults.get(0);
 			}
