@@ -21,6 +21,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.hateoas.MediaTypes;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors;
+import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
@@ -30,6 +31,7 @@ import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
@@ -40,6 +42,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @SpringBootTest
 @AutoConfigureMockMvc
 @DisplayName("Cartography Repository Data REST test")
+@DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
 class CartographyRepositoryDataRestTest {
 
   private static final String CARTOGRAPHY_NAME = "Cartography Name";
@@ -62,18 +65,18 @@ class CartographyRepositoryDataRestTest {
   private ArrayList<CartographyAvailability> availabilities;
 
   @BeforeEach
-  public void init() {
+  void init() {
       territory = Territory.builder()
         .name("Territorio 1")
-        .code("")
+        .code("some-code")
         .blocked(false)
         .build();
       territoryRepository.save(territory);
 
       service = Service.builder()
         .name("Service")
-        .serviceURL("")
-        .type("")
+        .serviceURL("http://localhost/api/services/1")
+        .type("service-type")
         .blocked(false)
         .build();
       serviceRepository.save(service);
@@ -84,7 +87,7 @@ class CartographyRepositoryDataRestTest {
       Cartography.CartographyBuilder cartographyDefaults = Cartography.builder()
         .type("I")
         .name(CARTOGRAPHY_NAME)
-        .layers(Collections.emptyList())
+        .layers(List.of("Layer1", "Layer2"))
         .queryableFeatureAvailable(false)
         .queryableFeatureEnabled(false)
         .service(service)
@@ -113,7 +116,7 @@ class CartographyRepositoryDataRestTest {
   }
 
   @AfterEach
-  public void after() {
+  void after() {
       cartographyAvailabilityRepository.deleteAll(availabilities);
       cartographyRepository.deleteAll(cartographies);
       serviceRepository.delete(service);
@@ -126,7 +129,7 @@ class CartographyRepositoryDataRestTest {
 
     String content = new JSONObject()
       .put("name", CARTOGRAPHY_NAME)
-      .put("layers", new JSONArray())
+      .put("layers", new JSONArray(List.of("Layer1", "Layer2")))
       .put("queryableFeatureAvailable", false)
       .put("queryableFeatureEnabled", false)
       .put("service", "http://localhost/api/services/" + service.getId())
@@ -151,7 +154,7 @@ class CartographyRepositoryDataRestTest {
 
       String[] paths = URI.create(location).getPath().split("/");
       Integer id = Integer.parseInt(paths[paths.length - 1]);
-      cartographyRepository.findById(id).ifPresent((it) -> cartographies.add(it));
+      cartographyRepository.findById(id).ifPresent(it -> cartographies.add(it));
   }
 
   @Test
@@ -189,46 +192,42 @@ class CartographyRepositoryDataRestTest {
    * @see <a href="https://github.com/sitmun/sitmun-admin-app/issues/41"/>Github</a>
    */
   @Test
-  @DisplayName("PUT: applyFilterXXX must not be a number")
+  @DisplayName("PUT: applyFilterXXX must not use integers as use booleans")
   void checkIssueSitmunAdminApp41() throws Exception {
-    String badRequest = "{\"name\":\"SEE1M - Recollida selectiva\"," +
-      "\"layers\":[\"SEE1M_111P_MA\"]," +
-      "\"minimumScale\":null," +
-      "\"maximumScale\":85000," +
-      "\"order\":3577," +
-      "\"transparency\":0," +
-      "\"metadataURL\":\"http://sitmun.diba.cat/sitmun2/metadada.jsp?title=SE${MUN_INE}&lang=${LANG}\"," +
-      "\"legendType\":\"CAPABILITIES\"," +
-      "\"legendURL\":null," +
-      "\"description\":null," +
-      "\"datasetURL\":null," +
-      "\"applyFilterToGetFeatureInfo\":\"0\"," +
-      "\"applyFilterToSpatialSelection\":\"1\"," +
-      "\"queryableFeatureEnabled\":true," +
-      "\"queryableFeatureAvailable\":false," +
-      "\"queryableLayers\":[\"SEE1M_111P_MA\"]," +
-      "\"thematic\":false," +
-      "\"blocked\":false," +
-      "\"selectableFeatureEnabled\":true," +
-      "\"selectableLayers\":[\"DIBA:SIT_SEE1MV1_111P_MA\"]," +
-      "\"_links\":{" +
-      "\"self\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724\"}," +
-      "\"cartography\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724{?projection}\",\"templated\":true}," +
-      "\"filters\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/filters\"}," +
-      "\"spatialSelectionConnection\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/spatialSelectionConnection\"}," +
-      "\"availabilities\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/availabilities{?projection}\",\"templated\":true}," +
-      "\"parameters\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/parameters\"}," +
-      "\"service\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/service\"}," +
-      "\"spatialSelectionService\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/spatialSelectionService\"}," +
-      "\"defaultStyle\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/defaultStyle\"}," +
-      "\"permissions\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/permissions\"}," +
-      "\"styles\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/styles\"}," +
-      "\"treeNodes\":{\"href\":\"https://sitmun-backend-core.herokuapp.com/api/cartographies/724/treeNodes{?projection}\",\"templated\":true}}" +
-            '}';
+    String badRequest = """
+      {
+          "name": "SEE1M - Recollida selectiva",
+          "layers": [
+              "SEE1M_111P_MA"
+          ],
+          "minimumScale": null,
+          "maximumScale": 85000,
+          "order": 3577,
+          "transparency": 0,
+          "metadataURL": "http://sitmun.diba.cat/sitmun2/metadada.jsp?title=SE${MUN_INE}&lang=${LANG}",
+          "legendType": "CAPABILITIES",
+          "legendURL": null,
+          "description": null,
+          "datasetURL": null,
+          "applyFilterToGetFeatureInfo": "0",
+          "applyFilterToSpatialSelection": "1",
+          "queryableFeatureEnabled": true,
+          "queryableFeatureAvailable": false,
+          "queryableLayers": [
+              "SEE1M_111P_MA"
+          ],
+          "thematic": false,
+          "blocked": false,
+          "selectableFeatureEnabled": true,
+          "selectableLayers": [
+              "DIBA:SIT_SEE1MV1_111P_MA"
+          ]
+      }""";
     mvc.perform(MockMvcRequestBuilders.put(URIConstants.CARTOGRAPHY_URI, 724)
         .contentType(MediaType.APPLICATION_JSON)
         .content(badRequest)
         .with(SecurityMockMvcRequestPostProcessors.user(Fixtures.admin())))
+      .andExpect(jsonPath("$.errors[0].field", is("applyFilterToGetFeatureInfo")))
       .andExpect(status().isUnprocessableEntity());
 
   }
